[build-system]
requires = ["setuptools>=61.0", "wheel", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "dynamaxsys"
dynamic = ["version"]
description = "dynamical systems with jax"
authors = [
    { name = "Karen Leung", email = "kymleung@uw.edu" }
]
dependencies = [
    "jax",
    "numpy",
    "equinox"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["dynamaxsys"]

[tool.setuptools_scm]